# oscal-rest-api

./: README.md  main.py  pyproject.toml
app/: main.py
app/routers/: catalogs.py
oscal_api/: backend.py
oscal_api/models/: catalog.py
oscal_api/routers/: assessment_results.py  catalogs.py  component_definitions.py  profiles.py
