[project]
name = "oscal-rest-api"
version = "0.1.0"
description = "Example REST API for managing OSCAL documents."
authors = [
    {name = "George Vauter",email = "gvauter@redhat.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi (>=0.115.12,<0.116.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
